# SymbolicClean

./: .gitignore  README.md  agent_pool.py  agi_controller.py  api_client.py  config.py  message_bus.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  curriculum.yaml
scripts/: add_saucedemo_skills.py  run_agi.py
symbolic_agi/: agent.py  agent_pool.py  agi_controller.py  api_client.py  consciousness.py  curriculum.py  long_term_memory.py  micro_world.py  planner.py  recursive_introspector.py  schemas.py  skill_manager.py  symbolic_identity.py  symbolic_memory.py  tool_plugin.py  tool_plugin_ext.py
symbolicagi/: ethical_governance.py  skill_manager.py
tests/: test_symbolicclean.py
